packages/jsii/test/negatives/neg.property-name.1.ts
///!MATCH_ERROR: Method and non-static non-readonly property names must use camelCase: PROP

export class MyClass {
    public PROP?: number;
}
